Bug 167111 - Help button for dialog "Select Your Preferred User Interface" is gone
Summary: Help button for dialog "Select Your Preferred User Interface" is gone
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-19 09:22 UTC by nobu
Modified: 2025-06-30 09:03 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
An image worth 1000's words... (49.87 KB, image/jpeg)
2025-06-20 13:03 UTC, Olivier Hallot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nobu 2025-06-19 09:22:57 UTC
Description:
Help button for dialog "Select Your Preferred User Interface" is gone.

Steps to Reproduce:
1. Open new Writer.
2. Open "Select Your Preferred User Interface"  Dialog.
   Menu - View > User Interface...

Actual Results:
3. There is no help button.

Expected Results:
3. There is a help button.
   In my environment, the following page used to open.
   https://help.libreoffice.org/25.8/en-US/text/shared/01/notebook_bar.html?System=WIN&DbPAR=WRITER&HID=cui/ui/toolbarmodedialog/dialog-action_area#bm_id971713389496388


Reproducible: Always


User Profile Reset: No

Additional Info:

It seems that the specification of the dialog changed and I forgot to place the help button.

Reproducible with
Version: 25.8.0.0.beta1 (X86_64) / LibreOffice Community
Build ID: 1b25e37a63c5a6f16bdcb365ed3da80ac419e6e4
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded

Reproducible with
[2025-06-18]
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cf339d5f79551dec606e4872d2bb0307be382080
CPU threads: 4; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: en-US (ja_JP); UI: en-US
Calc: CL threaded
Comment 1 V Stuart Foote 2025-06-19 12:02:33 UTC
Think this was intentional as the dialog was reworked for the first launch welcome.

@Heiko?
Comment 2 Heiko Tietze 2025-06-20 07:02:42 UTC
https://gerrit.libreoffice.org/c/core/+/184714 made the Help button hidden. It is part of the tabbed dialog and would require to respond to the selection. Do we need it? I mean the choice of UI and to select the toolbars is self-explanatory, isn't it?
Comment 3 Olivier Hallot 2025-06-20 13:03:50 UTC
Created attachment 201377 [details]
An image worth 1000's words...
Comment 4 Commit Notification 2025-06-23 17:52:28 UTC
Olivier Hallot committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/ddcdb85434e6d3e5a212e19046477cdd0fc9feab

tdf#167111 Adjust Help page on UI selection to match new dialog
Comment 5 Commit Notification 2025-06-24 05:44:40 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ef272d90c40f983d70e08613ba1def3793d6550c

Resolves tdf#167111 - Help for the UI Picker

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-06-25 13:40:42 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/bb31491ec72fb55d2f721d6392ecefc2a270998d

Resolves tdf#167111 - Help for the UI Picker

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.