Resolves tdf#167111 - Help for the UI Picker

Points to the not yet existing pages
* cui/ui/uitabpage/UITabPage
* cui/ui/toolbartabpage/ToolbarTabPage

Change-Id: I6a5326ccd2e2cb9f536ae68c14eff9af4237ef27
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186852
Tested-by: Jenkins
Reviewed-by: Olivier Hallot <olivier.hallot@libreoffice.org>